--- a/src/Pages/Services/Service/service.css
+++ b/src/Pages/Services/Service/service.css
@@ -3,21 +3,16 @@
         border: 1px solid pink;
         margin-bottom: 16px;
     }
-    .card:hover{
-        background-color: pink;
-        transition: .5s ease-in;
-        box-shadow: 10px 10px 5px whitesmoke;
-    }
 
     .card img{
         width: 100%;
-        height: 30vh;
+        height: 25vh;
     }
     .card button{
         width: 100%;
         background-color: blue ;
     }
     .card button:hover{
-        background-color: orange;
+        background-color: skyblue;
         transition: background-color .5s ease-in-out;
     }
