change product of the shop

--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -25,7 +25,7 @@
     background-color: white;
   }
   .footer-container {
-    background-color: #191919;
+    background-color: black;
     padding: 50px;
     color: #FFFFFF
   }
