added additional files

--- a/src/Pages/Home/HomeService/HomeService.css
+++ b/src/Pages/Home/HomeService/HomeService.css
@@ -1,7 +1,7 @@
 .bg{
-    background-image: url(../../../images/homeserviceimg.jpg);
+    background-image: url(../../../images/4884841.jpg);
     height: 100%;
     background-size: cover;
-    
-
+    background-attachment: fixed;
+    position: relative;
 }
